--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
-    <link rel="icon" href="favicon.ico" type="image/svg+xml" />
-
+    <link rel="icon" href="%PUBLIC_URL%/icon2.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Website to rate your landlord!" />
-
+    <meta
+      name="description"
+      content="Looking for landlord? Say no more!"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>Renters Grid</title>
   </head>
   <body>
